# Mongodbconnectorpkg

./: .gitignore  README.md  main.py  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  template.py  test.py  tox.ini
.github/workflows/: ci.yaml  python-publish.yaml
experiments/: experiments.ipynb
src/DB_database_Automate.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/database_automation/: mongo_crud.py
src/mongodb_connect/: mongo_crud.py
