# whatever we are going to write configuration inside the setup.cfg which we can see that configuration which is related to setup.py in the pipy website first page once if we host our package in pipy then  this setup.cfg configuration code get visible to users if they search for our package name in google whih we hosted in pipy
[metadata] # here this metadata is a file or tag and which that file consist of key:value here for example the key is license,license_file and its values are MIT, LICENSE
license = MIT  # here we mention the license of our repository which is in githuband  which that repository which is Mongodbconnectorpkg consist package files and folder and its related python code 
license_file = LICENSE # this is my License file
classifiers =   # so the package that we are going to upload in pipy that package is compatible for python version 3.8,3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent # here by this line we can understand that package that we are creating that package we can use in linux or windows or any other OS

[options] # this is also a file or tag which consit of some key: value 
install_requires = 
    ensure==1.0.2
    py-youtube==1.1.7
python_requires = >=3.7

[options.extras_require]
testing =
    pytest>=7.1.3
    mypy>=0.971
    flake8>=5.0.4
    tox>=3.25.1
    black>=22.8.0

[options.package_data]
MongoDB-Connect=py.typed

[flake8]
max-line-length = 160
exclude = __init__.py
